--- a/po/de.po
+++ b/po/de.po
@@ -1,4 +1,5 @@
 # German translations for kdirstat
+
 msgid ""
 msgstr ""
 "Project-Id-Version: de\n"
@@ -6,6 +7,7 @@ msgstr ""
 "POT-Creation-Date: 2010-02-26 23:31-0500\n"
 "PO-Revision-Date: 2008-12-18 14:31+0100\n"
 "Last-Translator: Stefan Hundhammer <sh@suse.de>\n"
+"Language-Team: German <sh@suse.de>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
