--- a/po/fr.po
+++ b/po/fr.po
@@ -1,19 +1,22 @@
 # translation of fr.po to français
 # Copyright (C) 2003 Free Software Foundation, Inc.
-# Michel Grentzinger <mic.grentz@online.fr>, 2003
 #
+# Michel Grentzinger <mic.grentz@online.fr>, 2003, 2011.
+# Jerome Robert <jeromerobert@gmx.com>, 2011.
 msgid ""
 msgstr ""
 "Project-Id-Version: kdirstat 2.3.6\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-02-26 23:31-0500\n"
-"PO-Revision-Date: 2003-04-25 21:45GMT\n"
-"Last-Translator: Michel Grentzinger <mic.grentz@online.fr>\n"
+"PO-Revision-Date: 2011-11-14 11:11+0100\n"
+"Last-Translator: Jerome Robert <jeromerobert@gmx.com>\n"
 "Language-Team: French <traduc@traduc.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: KBabel 1.0.1\n"
+"X-Generator: Lokalize 1.2\n"
+"Language: fr\n"
+"Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
 #: ../src/main.cpp:23
 msgid ""
@@ -62,11 +65,11 @@ msgstr ""
 
 #: ../src/k4dirstat.cpp:210
 msgid "Zoom in"
-msgstr ""
+msgstr "Zoomer"
 
 #: ../src/k4dirstat.cpp:215
 msgid "Zoom out"
-msgstr ""
+msgstr "Dézoomer"
 
 #: ../src/k4dirstat.cpp:220
 msgid "Select Parent"
@@ -360,7 +363,6 @@ msgid "&Really Revert to Defaults"
 msgstr "&Revenir vraiment aux valeurs par défaut"
 
 #: ../src/kdirstatsettings.cpp:209
-#, fuzzy
 msgid "Tree Level %1"
 msgstr "Niveau de l'arborescence %1"
 
@@ -507,11 +509,11 @@ msgstr ""
 
 #: ../src/kdirstatsettings.cpp:757 ../src/kdirstatsettings.cpp:790
 msgid "&Edit"
-msgstr ""
+msgstr "&Édition"
 
 #: ../src/kdirstatsettings.cpp:758 ../src/kdirstatsettings.cpp:791
 msgid "&Delete"
-msgstr ""
+msgstr "&Supprimer"
 
 #: ../src/kdirstatsettings.cpp:894
 #, fuzzy
@@ -537,7 +539,7 @@ msgstr ""
 
 #: ../src/kdirstatsettings.cpp:947
 msgid "Delete?"
-msgstr ""
+msgstr "Supprimer?"
 
 #: ../src/kdirstatsettings.cpp:975
 msgid "S&quarify Treemap"
@@ -584,9 +586,8 @@ msgid "&Files: "
 msgstr "&Fichiers"
 
 #: ../src/kdirstatsettings.cpp:1031
-#, fuzzy
 msgid "&Directories: "
-msgstr "&Répertoires"
+msgstr "&Répertoires:"
 
 #: ../src/kdirstatsettings.cpp:1036
 msgid "Gr&id: "
@@ -747,9 +748,8 @@ msgstr "Go"
 #. i18n: file: ../src/k4dirstatui.rc:16
 #. i18n: ectx: Menu (file)
 #: ui_rc.cpp:3
-#, fuzzy
 msgid "&File"
-msgstr "&Fichiers"
+msgstr "&Fichier"
 
 #. i18n: file: ../src/k4dirstatui.rc:35
 #. i18n: ectx: Menu (cleanup)
@@ -766,9 +766,8 @@ msgstr ""
 #. i18n: file: ../src/k4dirstatui.rc:71
 #. i18n: ectx: Menu (settings)
 #: ui_rc.cpp:12
-#, fuzzy
 msgid "&Settings"
-msgstr "Paramètres"
+msgstr "&Paramètres"
 
 #. i18n: file: ../src/k4dirstatui.rc:78
 #. i18n: ectx: Menu (report)
@@ -780,7 +779,7 @@ msgstr "&Rapport"
 #. i18n: ectx: Menu (help)
 #: ui_rc.cpp:18
 msgid "&Help"
-msgstr ""
+msgstr "&Aide "
 
 #. i18n: file: ../src/k4dirstatui.rc:97
 #. i18n: ectx: ToolBar (mainToolBar)
