--- a/po/hu.po
+++ b/po/hu.po
@@ -18,6 +18,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.0.1\n"
+"Language: hu\n"
 
 #: ../src/main.cpp:23
 msgid ""
