--- a/po/it.po
+++ b/po/it.po
@@ -14,6 +14,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.0\n"
+"Language: it\n"
 
 #: ../src/main.cpp:23
 msgid ""
