--- a/po/ja.po
+++ b/po/ja.po
@@ -16,6 +16,7 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 3.1.2\n"
+"Language: ja\n"
 
 #: ../src/main.cpp:23
 msgid ""
