Change the Clean Up menu to Actions

--- a/po/de.po
+++ b/po/de.po
@@ -721,7 +721,7 @@ msgstr "&Datei"
 #. i18n: file: ../src/k4dirstatui.rc:35
 #. i18n: ectx: Menu (cleanup)
 #: ui_rc.cpp:6
-msgid "Clean &Up"
+msgid "&Actions"
 msgstr "A&ufräumen"
 
 #. i18n: file: ../src/k4dirstatui.rc:59
