--- a/po/hu.po
+++ b/po/hu.po
@@ -760,7 +760,7 @@ msgstr "&Fájlok"
 #. i18n: file: ../src/k4dirstatui.rc:35
 #. i18n: ectx: Menu (cleanup)
 #: ui_rc.cpp:6
-msgid "Clean &Up"
+msgid "&Actions"
 msgstr "&Tisztítás"
 
 #. i18n: file: ../src/k4dirstatui.rc:59
