--- a/po/ja.po
+++ b/po/ja.po
@@ -732,7 +732,7 @@ msgstr "ファイル(&F)"
 #. i18n: file: ../src/k4dirstatui.rc:35
 #. i18n: ectx: Menu (cleanup)
 #: ui_rc.cpp:6
-msgid "Clean &Up"
+msgid "&Actions"
 msgstr "クリーンアップ(&U)"
 
 #. i18n: file: ../src/k4dirstatui.rc:59
