--- a/po/it.po
+++ b/po/it.po
@@ -572,7 +572,7 @@ msgstr "Gr&iglia: "
 #. don't stretch
 #. stretch this as you like
 #: ../src/kdirstatsettings.cpp:1050
-msgid "Hi&ghlight R&ectangle: "
+msgid ""Highlight R&ectangle: "
 msgstr "Evidenzia R&ettangolo; "
 
 #: ../src/kdirstatsettings.cpp:1058
