--- a/po/nl.po
+++ b/po/nl.po
@@ -273,7 +273,7 @@ msgstr "Ras&ter:"
 #. don't stretch
 #. stretch this as you like
 #: ../src/kdirstatsettings.cpp:1053
-msgid "Hi&ghlight R&ectangle: "
+msgid ""Highlight R&ectangle: "
 msgstr "Op&lichten van rechthoek:"
 
 #: ../src/kdirstatsettings.cpp:1061
