--- a/po/ja.po
+++ b/po/ja.po
@@ -574,7 +574,7 @@ msgstr "グリッド(&i): "
 #. don't stretch
 #. stretch this as you like
 #: ../src/kdirstatsettings.cpp:1050
-msgid ""Highlight R&ectangle: "
+msgid "Highlight R&ectangle: "
 msgstr "ハイライト(&g)・長方形(&e): "
 
 #: ../src/kdirstatsettings.cpp:1058
