--- a/TODO
+++ b/TODO
@@ -1,3 +1,8 @@
+- Selection color in the tree view
+- Refresh current selection change current selection and fold it
+- Change refresh selection icon
+
+
 			    TODO list for k4dirstat (KDirStat KDE4 port)
 			   ========================
 							Updated: 2010-03-03
