Add an AUTHOR section to the man page

--- a/k4dirstat.1
+++ b/k4dirstat.1
@@ -56,4 +56,6 @@ screen_number, switches displays on X11\. Overrides the \fBDISPLAY\fR environmen
 .TP
 \fB\-geometry\fR
 geometry, same as \fB\-qwindowgeometry\fR\.
-
+.
+.SH "AUTHOR"
+This man page was written by Jerome Robert.
